--- a/votalk-app/package.json
+++ b/votalk-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.4",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-linear-gradient": "~15.0.7",
