--- a/votalk-app/package.json
+++ b/votalk-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@react-native-picker/picker": "^2.11.4",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
@@ -19,6 +20,8 @@
     "lucide-react-native": "^0.555.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-keyboard-controller": "^1.20.7",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1"
